# myitsm

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  L1_VIEW_DEFINITION.csv  README.md  migrate_data.py  pyproject.toml  re_migrate.py  testfortypora.md  wsgi.py
.claude/: settings.local.json
PBsrc/: L1_OBJECT_OVERVIEW.csv
app/: __init__.py  config.py
app_d.pbl/: d_comm_warehouse.srd  d_mc_areausers.srd  d_mc_busityp_form.srd  d_mc_busityp_list.srd  d_mc_groupuser_grid.srd  d_mc_groupusers.srd  d_mc_menu_form.srd  d_mc_menu_right.srd  d_mc_menus_user_list.srd  d_mc_sysparm.srd  d_mc_usermenu_update.srd  d_mm_city_list.srd  d_mm_country_form.srd  d_mm_province_form.srd  d_mm_syscodes_form.srd  d_mm_town_form.srd  d_mm_transferdata.srd  d_wh_warehouse.srd
app_dddw.pbl/: dd_itemprodate.srd  dd_mc_dept_valid.srd  dd_mc_users.srd  dd_mc_users_valid.srd  dd_mc_warehouse.srd  dd_mc_warehouse_valid.srd  dd_mm_area.srd  dd_mm_billtyp_ar.srd  dd_mm_busityp.srd  dd_mm_city.srd  dd_mm_commmode.srd  dd_mm_country.srd  dd_mm_custclass_anm.srd  dd_mm_custclass_useflg.srd  dd_mm_custmers.srd  dd_mm_dbreason.srd  dd_mm_invoicetyp.srd  dd_mm_itemclass_all.srd  dd_mm_itemnm_all.srd  dd_mm_itemunit_inuse.srd  dd_mm_paytyp.srd  dd_mm_pctyp.srd  dd_mm_pctyp_check.srd  dd_mm_province.srd  dd_mm_province_of_onecountry.srd  dd_mm_sltyp.srd  dd_mm_syscodes.srd  dd_route.srd  dddw_users_qc.srd  ddlb_mm_area.srd
app_main.pbl/: d_openedmodules.srd  p_fy_exe.srj  u_appbase.sru  u_startpage.sru  u_startpage_bak.sru  u_startpage_inv.sru
app_system.pbl/: u_mm_city.sru  (+8 more)
(+1752 files in other folders)
